Progress elements with -webkit-appearance: none should retain their role.

If a <progress> element has its appearance removed with -webkit-appearance:none,
it should still retain its role for accessibility. This CL also adds a test
to check that various other control types are not affected by this issue.

R=aboxhall@chromium.org

Bug: 687828
Change-Id: I1a30e581dd109b34cae69ec9737cb233ceb5f1fb