third_party/WebKit/Source/modules/accessibility/AXNodeObject.cpp
@@ -420,6 +420,9 @@ AccessibilityRole AXNodeObject::NativeAccessibilityRoleIgnoringAria() const {
   if (IsHTMLMeterElement(*GetNode()))
     return kMeterRole;
 
+  if (IsHTMLProgressElement(*GetNode()))
+    return kProgressIndicatorRole;
+
   if (IsHTMLOutputElement(*GetNode()))
     return kStatusRole;
 
